# x-lang

./: Cargo.toml  README.md
examples/: Bitwise.x  FizzBuzz.x  Hello.x  anonymous_function.x  become.x  binary_search.x  bubble_sort.x  features.x  fibonacci.x  generics.x  hanoi.x  hello.x  import.x  invariant.x  layout.x  lifetime.x  math.x  memoise.x  module_utils.x  move_error.x  multi.x  newton_sqrt.x  parallel.x  pure.x  raylib.x  selection_sort.x  static.x  struct.x  throws.x  traits.x  types.x  unique.x
runtime/: cache_runtime.c  cache_runtime.h  parallel.c
src/: ast.rs  codegen.rs  main.rs  parser.rs  scope.rs
src/binary_ops/: add.rs  addassign.rs  and.rs  bitand.rs  bitmod.rs  bitor.rs  bitxor.rs  div.rs  divassign.rs  eq.rs  ge.rs  gt.rs  le.rs  lt.rs  mod.rs  mul.rs  mulassign.rs  ne.rs  or.rs  sub.rs  subassign.rs
x-ast/: Cargo.toml
x-ast/src/: lib.rs
x-bench/: Cargo.toml
x-bench/benchmarks/: cansum_memoised.x  cansum_normal.x  expensive_memoised.x  expensive_normal.x  fib_memoised.x  fib_normal.x
x-bench/src/: main.rs
x-borrow-checker/: Cargo.toml
x-borrow-checker/src/: lib.rs
x-cli/: Cargo.toml
x-cli/src/: apply_suggestions.rs  diagnostics.rs  main.rs
x-codegen/: Cargo.toml
x-codegen/src/: array.rs  assignment.rs  become.rs  coercion.rs  comparison.rs  expression.rs  extern_fn.rs  for_loop.rs  function.rs  if.rs  import.rs  lib.rs  memoise.rs  multi.rs  specialise.rs  statement.rs  struct.rs  substitute.rs  trait.rs  type.rs  while.rs
x-codegen/src/become/: mod.rs
x-codegen/src/expression/: array.rs  binary.rs  function.rs  mod.rs  unary.rs
x-codegen/src/for_loop/: mod.rs
x-codegen/src/function/: mod.rs
x-codegen/src/if/: mod.rs
x-codegen/src/import/: file_import.rs  mod.rs
x-codegen/src/memoise/: mod.rs
x-codegen/src/statement/: mod.rs
x-codegen/src/struct/: mod.rs
x-codegen/src/while/: mod.rs
x-debugger/: Cargo.toml
x-debugger/src/: main.rs
x-diagnostics/: Cargo.toml
x-diagnostics/src/: applicator.rs  diagnostic.rs  emitter.rs  lib.rs  macros.rs  main.rs  span.rs
x-garbage-collector/: Cargo.toml
x-garbage-collector/src/: lib.rs
x-logging/: Cargo.toml
x-logging/src/: lib.rs
x-parser/: Cargo.toml
x-parser/src/: anonymous_function.rs  array.rs  block.rs  boolean.rs  diagnostics.rs  expression.rs  extern_fn.rs  for.rs  function.rs  identifier.rs  if.rs  import.rs  lib.rs  number.rs  postfix_op.rs  prefix_op.rs  return.rs  statement.rs  string.rs  struct.rs  term.rs  types.rs  while.rs  x.pest
x-std/: Cargo.toml
x-std/src/: lib.rs
x-tests/: Cargo.toml  cache_runtime.c  cache_runtime.h
x-tests/tests/: borrow_lifetimes.rs  common.rs  diagnostics_example.rs  examples_compile.rs  helpers.rs  multi.rs  pure_memo.rs  throws.rs  traits.rs
x-typechecker/: Cargo.toml
x-typechecker/src/: diagnostics.rs  expression.rs  function.rs  generics.rs  infer.rs  lib.rs  statement.rs  struct.rs  substitute.rs  trait.rs
