[package]
name = "x-lang"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "x-lang"
path = "src/main.rs"

[workspace.package]
edition = "2021"
version = "0.1.0"


[workspace]
default-members = ["x-cli"]
members = [
    "x-codegen",
    "x-parser",
    "x-ast",
    "x-cli",
    "x-std",
    "x-typechecker",
    "x-bench",
    "x-debugger",
    "x-borrow-checker",
    "x-garbage-collector",
    "x-tests",
    "x-diagnostics",
    "x-logging",
]

[workspace.dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
