[package]
name = "x-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
x-codegen = { path = "../x-codegen" }
x-parser = { path = "../x-parser" }
x-ast = { path = "../x-ast" }
clap = { version = "4.5.27", features = ["derive"] }
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
log = "0.4.25"
env_logger = "0.11.6"
