[package]
name = "x-logging"
edition.workspace = true
version.workspace = true

[lib]
name = "x_logging"
path = "src/lib.rs"

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.143", optional = true }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "ansi",
] }

x-diagnostics = { path = "../x-diagnostics" }

[features]
json = ["serde", "serde_json", "tracing-subscriber/json"]
